--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     <a href="https://www.linkedin.com/in/anabraghim?originalSubdomain=br"><img src="./imgs/logo_linkedin.png" alt=""></a>
                     <a href="https://www.tiktok.com/@anabcodes"><img src="./imgs/logo_tiktok.png" alt=""></a>
                     <a href="https://www.youtube.com/@anabcodes"><img src="./imgs/logo_youtube.png" alt=""></a>
-                    <a href=""><img src="./imgs/logo_github.png" alt=""></a>
-                    <a href=""><img src="./imgs/logo_email.png" alt=""></a>
+                    <a href="https://github.com/anabcodes"><img src="./imgs/logo_github.png" alt=""></a>
+                    <a href="mailto:contatoanabraghim@gmail.com"><img src="./imgs/logo_email.png" alt=""></a>
                 </section>
             </div>
         </div>
         <div class="box_form">
             <section class="cont_form">
-                <form action="https://formsubmit.co/anamaravilhosa46@gmail.com" method="POST">
+                <form action="https://formsubmit.co/contatoanabraghim@gmail.com" method="POST">
                     <p>Entre em contato comigo</p>
                     <input type="text" name="name" placeholder="nome" required>
                     <input type="email" name="email" placeholder="email" required>
