--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href=""><div class="img_link" id="link1">
                         <p>Repositório da Florzinha com HTML e CSS</p>
                     </div></a>
-                    <a href=""><div class="img_link" id="link2">
+                    <a href="https://github.com/anabcodes/links"><div class="img_link" id="link2">
                         <p>Repositório do site de links com HTML e CSS</p>
                     </div></a>
                 </section>
